# mobi

./: .ci-touch  .gitignore  ARCHITECTURE_STATE.md  CONTRIBUTING.md  E2E_TESTS_SUMMARY.md  FIXES_SUMMARY.md  Makefile  PREVIEW_DEBUG_GUIDE.md  README.md  SAVE_BUTTON_FIX.md  TASK-029-FIX-SUMMARY.md  TASK-029-FIXES-SUMMARY.md  TASKS.md  TEST_COMPLETION_SUMMARY.md  create_test_images.py  debug_vision.py  terraform-plan.md  test.db  test_api_integration.py  test_fixes.py  test_frontend_fixes.js  test_integration.py  test_logic.py  test_open_concept_fix.py  test_vision_integration.py
.github/: .deploy-trigger
.tracker/: SKILL.md  WORKFLOW.md  learnings.md  prd.json  progress.md
backend/: .coverage  Dockerfile  init_db.py  pyproject.toml  requirements.txt.old  test.db  test_endpoint.py  test_http.py  test_with_data.py
backend/app/: DATABASE_SCHEMA.md  VISION_MODEL_README.md  feature_extractor.py  field_suggestions.py  main.py  models.py  orchestrator.py  schemas.py  vision_model.py
backend/app/tests/: test_integration.py  test_models.py
backend/tests/: test_analyze_step.py  test_description_api.py  test_feature_extraction.py  test_feature_extraction_utils.py  test_feature_extractor.py  test_field_suggestions.py  test_input_types.py  test_multi_image_analysis.py  test_orchestration_integration.py  test_orchestrator.py  test_save_listing.py  test_ui_manifest_generation.py  test_vision_model.py
ci-status/: run-21817769896.json
frontend/: Dockerfile  RUN_VIDEO_TEST.md  TEST-RESULTS.md  index.html  package-lock.json  package.json  playwright-new.config.ts  tsconfig.json  (+3 more)
(+148 files in other folders)
