[project]
name = "mobi-backend"
version = "0.1.0"
description = "Mobi property listing backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "sqlalchemy==2.0.36",
    "psycopg[binary,pool]==3.2.3",
    "pydantic==2.9.2",
    "httpx==0.27.2",
    "openai>=1.0.0",
    "pillow>=10.0.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=app --cov-report=html --cov-report=term"

[dependency-groups]
dev = [
    "pytest==8.3.3",
    "pytest-cov>=4.1.0",
]
